test/corpus/reference_examples.txt
==================
reference example
==================

[DataTag: support
  [ Encrypt=None;   DUA_AM=Implied -> Blue    ]
  [ Encrypt=Quick;  DUA_AM=Click   -> Yellow  ]
  [ Encrypt=Hard;   DUA_AM=Click   -> Green   ]
  [ Encrypt=Double; DUA_AM=Type    -> Red     ]
  [ Encrypt=Double; DUA_AM=Sign    -> Crimson ]
]


---
(source_file (value_inferrer (slot_reference (slot_identifier)) (inference_pair (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (slot_value (slot_identifier))) (inference_pair (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (slot_value (slot_identifier))) (inference_pair (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (slot_value (slot_identifier))) (inference_pair (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (slot_value (slot_identifier))) (inference_pair (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (assignment_slot (atomic_assignment_slot (slot_reference (slot_identifier)) (slot_value (slot_identifier)))) (slot_value (slot_identifier)))))						

